[package]
name = "evm-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29", features = ["rand", "hashes"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
bip39 = "2.0"